Codestyle - Add and apply spotless for consistent code formatting